Logging-added